Adding the strikethrough and underline tools.

--- a/src/Writing.Tools/Properties/Resources.resx
+++ b/src/Writing.Tools/Properties/Resources.resx
@@ -157,6 +157,18 @@
   <data name="RightAlign_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RightAlign_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Strikethrough_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Strikethrough_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Strikethrough_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Strikethrough_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Underline_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Underline_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Underline_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Underline_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="UnorderedList_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UnorderedList_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
